🚀 Railway Deployment Ready + Internal Feedback System
✅ Features Added:
- Complete Railway deployment configuration (Dockerfile, railway.toml)
- Internal feedback system with screenshot upload support
- Extended database schema (team_members, internal_feedback, comments, screen_templates)
- Production-ready server configuration with static file serving
- Automatic database migration script (railway-migrate.js)
- Environment variables template for Railway
- Complete API routes for internal feedback system
- Team management and collaboration features

✅ Database Extensions:
- 4 new tables for internal feedback system
- Team members management (6 initial team members)
- Screen templates for 200+ mobile + 40+ web screens
- Comment system for bug reports
- Status workflow (open → in_progress → fixed → verified)
- RLS policies for security

✅ Production Ready:
- Docker containerization
- Environment-based configuration
- Security headers and rate limiting
- Error handling and graceful shutdown
- Health check endpoint
- CORS configuration for production

🎯 Ready for deployment to Railway with complete customer + internal feedback system!

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Prometheus Feedback Tool - Mobile-First React + Node.js Feedback System",
   "main": "index.js",
   "scripts": {
+    "start": "cd server && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
+    "build:production": "cd client && npm run build && cd ../server && npm install --only=production",
     "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+    "deploy:setup": "npm run build:production && cd server && node setup-database.js",
+    "railway:deploy": "railway up",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
