--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.7.0",
+    "axios": "^1.3.0",
+    "framer-motion": "^10.0.0",
+    "http-proxy-middleware": "^3.0.5",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.3.0",
-    "@supabase/supabase-js": "^2.7.0",
-    "lucide-react": "^0.263.1",
-    "framer-motion": "^10.0.0",
-    "react-hot-toast": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,6 +25,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
     ]
   },
   "browserslist": {
@@ -39,9 +45,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.0"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
