--- a/server/package.json
+++ b/server/package.json
@@ -19,17 +19,18 @@
   "author": "Prometheus Team",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "@supabase/supabase-js": "^2.7.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
     "express-validator": "^6.14.0",
-    "uuid": "^9.0.0",
     "helmet": "^6.0.1",
-    "compression": "^1.7.4"
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
